--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Ao Liu"
-description              : "Homepage "
+description              : "Ao Liu's Homepage "
 repository               : "Aolius/Aolius.github.io"
 google_scholar_stats_use_cdn : true
 
