--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,17 +6,28 @@ main:
   - title: "News"
     url: "/#-news"
 
+  - title: "Educations"
+    url: "/#-educations"
+  
+  - title: "Internships"
+    url: "/#-internships"
+    
+  - title: "Preprints"
+    url: "/#-preprints"
+    
   - title: "Publications"
     url: "/#-publications"
+    
+  - title: "Invited Talks"
+    url: "/#-invited-talks"
 
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
-  - title: "Educations"
-    url: "/#-educations"
+  - title: "Academic Services"
+    url: "/#-academic-services"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
 
-  - title: "Internships"
-    url: "/#-internships"
+
+
+
